# Game

./: .gitignore  CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  defines.hpp  functions.cpp  functions.hpp  header.hpp  main.cpp  map.cpp  map.data  map.hpp  np_character.cpp  np_character.hpp  spritesheet.cpp  spritesheet.hpp
Menu/: main.cpp  widget.cpp  widget.hpp
SpriteAtlas/: imageAtlas.cpp  imageAtlas.hpp  main.cpp
sprites/: char_large.psd  char_sprite.psd  char_sprite.xcf  mage_large.psd  mage_sprite.psd  player_sprite.psd
